<resources>
    <string name="app_name">EyeBallMaze</string>
    <string name="game_start">Start</string>
    <string name="game_restart">Restart Stage</string>
    <string name="go_back_one_movement">Go back once</string>
    <string name="sound_control">Sound</string>
    <string name="board_block">This is a clickable board block</string>
    <string name="empty_block">This is an empty block, cannot move to here</string>
    <string name="game_manual">Manually</string>
    <string name="game_auto">Programmatically</string>
    <string name="sound_on">On</string>
    <string name="sound_off">Off</string>
    <string name="game_save">Save</string>
    <string name="game_load">Load</string>
    <string name="stage_one_choose">Stage 1</string>
    <string name="stage_two_choose">Stage 2</string>
    <string name="number_of_goals">Number of Goal(s) : %1$d</string>
    <string name="number_of_movements">Number of Movements : %1$d</string>
    <string name="movements_left">Movements left : %1$d</string>
    <string name="time_taken">00:00:00</string>
    <string name="tutorial">Tutorial</string>
</resources>
