<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartScreen"
    tools:layout_editor_absoluteY="81dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/background" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="false"
            android:layout_alignParentRight="false"
            android:layout_alignParentBottom="false"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="false"
                android:layout_alignParentBottom="false"
                android:layout_centerInParent="true"
                android:background="@color/colorPrimaryDark"
                android:clickable="false"
                android:onClick="startGameStageManual"
                android:text="@string/game_manual"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonStartAuto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="false"
                android:layout_alignParentBottom="false"
                android:layout_centerInParent="true"
                android:background="@color/colorPrimary"
                android:clickable="false"
                android:onClick="startGameStageOneAuto"
                android:text="@string/game_auto"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                android:textSize="30sp" />

            <Button
                android:id="@+id/buttonTutorial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/common_google_signin_btn_text_dark_pressed"
                android:onClick="showTutorial"
                android:text="@string/tutorial"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="30sp" />
        </LinearLayout>

    </RelativeLayout>



</android.support.constraint.ConstraintLayout>